Bug 471978 - Cannot customize the toolbar
Summary: Cannot customize the toolbar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-05 13:06 UTC by Patrick Silva
Modified: 2023-07-25 17:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-05 13:06:13 UTC
STEPS TO REPRODUCE
1. open Dolphin
2. right-click on any button from the toolbar 
3. 

OBSERVED RESULT
the option used to customize the toolbar is not available

EXPECTED RESULT
we can customize the toolbar

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2023-07-05 20:40:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/174
Comment 2 Bug Janitor Service 2023-07-07 11:51:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/175
Comment 3 Bug Janitor Service 2023-07-20 17:23:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kxmlgui/-/merge_requests/176
Comment 4 Kai Uwe Broulik 2023-07-25 17:34:38 UTC
Git commit b9a463d7ef2a0117e1d7c6e6b2eb3e18c571233d by Kai Uwe Broulik.
Committed on 25/07/2023 at 12:29.
Pushed by nicolasfella into branch 'master'.

KToolBar: Restore context menu

This has been deprecated since 5.0 when the contextMenuEnabled property
got deprecated and subsequently got removed for 6.0.

However, the context menu code itself is still useful. Restore the code,
port it to non-deprecated API and instead follow the contextMenuPolicy.

M  +25   -8    src/ktoolbar.cpp
M  +1    -0    src/ktoolbar.h

https://invent.kde.org/frameworks/kxmlgui/-/commit/b9a463d7ef2a0117e1d7c6e6b2eb3e18c571233d