Restore KToolBar::contextMenuEvent

This was removed as part of removing deprecated code blocks

However we actually need this to show the context menu on right click

Only the enableContext handling should be removed

BUG: 471978