src/ktoolbar.cpp
@@ -107,9 +107,7 @@ public:
 
     void slotAppearanceChanged();
     void slotContextAboutToShow();
-#if 0
     void slotContextAboutToHide();
-#endif
     void slotContextLeft();
     void slotContextRight();
     void slotContextShowText();
@@ -735,17 +733,15 @@ void KToolBarPrivate::slotContextAboutToShow()
     }
 }
 
-// KF6 TODO: check if this can be removed
-#if 0
 void KToolBarPrivate::slotContextAboutToHide()
 {
     // We have to unplug whatever slotContextAboutToShow plugged into the menu.
     // Unplug the toolbar menu action
     KXmlGuiWindow *kmw = qobject_cast<KXmlGuiWindow *>(q->mainWindow());
     if (kmw && kmw->toolBarMenuAction()) {
-        if (kmw->toolBarMenuAction()->associatedWidgets().count() > 1) {
-            context->removeAction(kmw->toolBarMenuAction());
-        }
+        // if (kmw->toolBarMenuAction()->associatedWidgets().count() > 1) {
+        // context->removeAction(kmw->toolBarMenuAction());
+        // }
     }
 
     // Unplug the configure toolbars action too, since it's afterwards anyway
@@ -763,7 +759,6 @@ void KToolBarPrivate::slotContextAboutToHide()
 
     context->removeAction(contextLockAction);
 }
-#endif
 
 void KToolBarPrivate::slotContextLeft()
 {
@@ -1449,6 +1444,23 @@ void KToolBar::emitToolbarStyleChanged()
     QDBusMessage message = QDBusMessage::createSignal(QStringLiteral("/KToolBar"), QStringLiteral("org.kde.KToolBar"), QStringLiteral("styleChanged"));
     QDBusConnection::sessionBus().send(message);
 #endif
+}
+
+void KToolBar::contextMenuEvent(QContextMenuEvent *event)
+{
+    if (mainWindow()) {
+        QPointer<KToolBar> guard(this);
+        const QPoint globalPos = event->globalPos();
+        d->contextMenu(globalPos)->exec(globalPos);
+
+        // "Configure Toolbars" recreates toolbars, so we might not exist anymore.
+        if (guard) {
+            d->slotContextAboutToHide();
+        }
+        return;
+    }
+
+    QToolBar::contextMenuEvent(event);
 }
 
 #include "moc_ktoolbar.cpp"
